--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "dark"
 
 # Site Settings
 locale                   : "en"
-title                    : "Uday Kiran Reddy Kondreddy"
+title                    : "Uday Kiran"
 title_separator          : "-"
 name                     : "Uday Kiran"
 description              : "My Personal Blog"
