--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,4 @@ main:
   - title: "Certifications"
     url: /certifications/
   - title: "CV"
-    url: /CV/
+    url: /udaykiranreddy_resume.pdf/
