--- a/_config.yml
+++ b/_config.yml
@@ -249,7 +249,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "/about/"
       type: posts
     values:
       layout: single
