--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "AI evangelist, Machine learning engineer, influencer, Educator, Trainer"
   location         : "Hyderabad, India"
   target-blank     : "ext-link"
-  email            : "hello@udaykiran.dev"
+  email            : "uday@udaykiran.dev"
   youtube          :
   uri              :
   bitbucket        :
