--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 #minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-minimal_mistakes_skin    : "air"
+minimal_mistakes_skin    : "neon"
 
 # Site Settings
 locale                   : "en"
