--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
+remote_theme             : benbalter/retlab  
 # SEO Related
 google_site_verification :
 bing_site_verification   :
