--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
-remote_theme             : benbalter/retlab  
+remote_theme             : benbalter/retlab
 # SEO Related
 google_site_verification :
 bing_site_verification   :
@@ -190,6 +190,7 @@ timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 plugins:
   - jekyll-target-blank
+  - jekyll-remote-theme
 
 # Plugins
 gems:
