--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   location         : "Hyderabad, India"
   target-blank     : "ext-link"
   email            : "uday@udaykiran.dev"
-  youtube          :
+  youtube          : "https://www.youtube.com/channel/UCU9ny7XPs7f2EEqZb1jHicg?view_as=subscriber"
   uri              :
   bitbucket        :
   codepen          :
