--- a/_config.yml
+++ b/_config.yml
@@ -95,18 +95,18 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "udaykiranreddykondreddy"
+  github           : "udaykondreddy"
   google_plus      :
   keybase          :
-  instagram        : "udaykiran.kondreddy"
+  instagram        : "uday.kondreddy"
   lastfm           :
-  linkedin         : "udaykirankondreddy"
+  linkedin         : "udaykondreddy"
   pinterest        :
   soundcloud       :
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "ukondreddy1"
+  twitter          : "uday_kondreddy"
   vine             :
   weibo            :
   xing             :
