--- a/_config.yml
+++ b/_config.yml
@@ -95,18 +95,18 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "udaykondreddy"
+  github           :
   google_plus      :
   keybase          :
-  instagram        : "uday.kondreddy"
+  instagram        :
   lastfm           :
-  linkedin         : "udaykondreddy"
+  linkedin         :
   pinterest        :
   soundcloud       :
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "uday_kondreddy"
+  twitter          :
   vine             :
   weibo            :
   xing             :
