--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Uday Kiran"
   avatar           : "/assets/images/udaykiran.jpg"
-  bio              : "AI evangelist, Machine learning engineer, influencer, Educator, Trainer"
+  bio              : "AI evangelist, Machine learning engineer, influencer, Tech speaker"
   location         : "Hyderabad, India"
   target-blank     : "ext-link"
   email            : "uday@udaykiran.dev"
